# kalman_filter_odometry

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/kalman_filter_odometry/: kf.hpp  kf_odom_node.hpp  kinematic.hpp
launch/: kalman_filter_odometry.launch  kitti_bag_kalman_filter_odometry.launch
scripts/: plotter.py
src/: kf.cpp  kf_odom_node.cpp  kinematic.cpp
